--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,9 +1,85 @@
 /* imported google font style */
 @import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 
-/* Site navigation sizing and positioning */
+/* universal style settings */
 * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
+}
+
+/* accessability skip navigation bar styling for keyboard navigation users. Code tuition provided by Kevin Powell https://www.youtube.com/watch?v=jDDaOFr9nqQ */
+
+html {
+    scroll-behavior: smooth;
+  }
+  
+  .skip-nav {
+    background-color: #1e5c71;
+    color: white;
+    font-family: poppins, sans-serif;
+    text-decoration: none;
+    padding: 0.25rem 0.5rem;
+    border-radius: 0 0 0.25rem 0.25rem;
+    left: 0.5rem;
+    position: absolute;
+    transform: translateY(-120%);
+    transition: transform 325ms ease-in;
+  }
+  
+  .skip-nav:focus {
+    transform: translateY(0);
+  }
+  
+/* Navbar button and logo styling */
+h1,
+h2,
+p {
+  font-family: poppins, sans-serif;
+}
+
+.nav_links li,
+a {
+  font-family: poppins, sans-serif;
+  text-decoration: none;
+  color: #1e5c71;
+  line-height: 100px;
+  font-size: 100%;
+  letter-spacing: 3px;
+  box-shadow: inset 0 0 0 0 #1e5c71;
+  margin: 0 -0.25rem;
+  padding: 0 0.25rem;
+  transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.nav_links a:hover {
+  background-color: #1e5c71;
+  color: white;
+  box-shadow: inset 100px 0 0 0 #1e5c71;
+}
+
+.active {
+  border-bottom: 1px solid #1e5c71;
+}
+
+header {
+  cursor: pointer;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 30px 10%;
+}
+
+.logo {
+  height: 100%;
+  width: 175px;
+}
+
+.nav_links {
+  list-style: none;
+}
+
+.nav_links li {
+  display: inline-block;
+  padding: 0px 20px;
 }
