--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -118,3 +118,48 @@ header {
   .serve p {
     padding: 1em;
   }
+
+  .services {
+    cursor: pointer;
+    padding: 4vh 0;
+    text-align: center;
+    background-color: white;
+    color: #1e5c71;
+    display: flex;
+    justify-content: space-around;
+    flex-direction: row;
+  }
+  
+  .serve {
+    cursor: pointer;
+    flex-basis: 30%;
+  }
+  
+  .action {
+    cursor: pointer;
+    background-color: white;
+    display: flex;
+    flex-basis: 30%;
+    justify-content: center;
+  }
+  
+  .info {
+    cursor: pointer;
+    margin: 20px 0;
+    border: solid 1px white;
+    background-color: #1e5c71;
+    color: white;
+    font-size: 25px;
+    border-radius: 10px;
+    padding: 15px;
+    display: flex;
+    justify-content: center;
+    transition: 0.4s ease-in-out;
+  }
+  
+  .info:hover {
+    background-color: white;
+    color: #1e5c71;
+    border: 1px solid #1e5c71;
+    box-shadow: inset 100px 0 0 0 white;
+  }
