--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -163,3 +163,35 @@ header {
     border: 1px solid #1e5c71;
     box-shadow: inset 100px 0 0 0 white;
   }
+
+  footer {
+    background-color: #1e5c71;
+  }
+  
+  .footpar {
+    cursor: pointer;
+    background-color: #1e5c71;
+    display: flex;
+    justify-content: center;
+    font-size: smaller;
+    color: white;
+    margin: 0 2vh;
+  }
+  
+  .social-networks {
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    margin: auto;
+    list-style: none;
+  }
+  
+  .social-networks i {
+    font-size: 125%;
+    padding: 1.5em;
+    color: white;
+  }
+  
+  .social-networks i:hover {
+    transform: scale(2);
+  }
