--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,3 +353,30 @@ header {
   textarea::placeholder {
     color: white;
   }
+
+  /* Contact page action button */
+
+  #butt1 {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+  
+  .send {
+    cursor: pointer;
+    margin: 20px 0;
+    border: solid 1px white;
+    background-color: #1e5c71;
+    color: white;
+    font-size: 1.5rem;
+    border-radius: 10px;
+    padding: 10px;
+    transition: 0.4s ease-in-out;
+  }
+  
+  .send:hover {
+    background-color: white;
+    color: #1e5c71;
+    border: 1px solid #1e5c71;
+    box-shadow: inset 100px 0 0 0 white;
+  }
