--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -19,7 +19,7 @@ html {
     color: white;
     font-family: poppins, sans-serif;
     text-decoration: none;
-    padding: 0.25rem 0.5rem;
+    padding: 0.45rem 0.5rem;
     border-radius: 0 0 0.25rem 0.25rem;
     left: 0.5rem;
     position: absolute;
@@ -134,6 +134,8 @@ header {
     cursor: pointer;
     flex-basis: 30%;
   }
+
+  /* Index.html action button styling */
   
   .action {
     cursor: pointer;
@@ -163,6 +165,8 @@ header {
     border: 1px solid #1e5c71;
     box-shadow: inset 100px 0 0 0 white;
   }
+
+  /*  footer section and social media icon styling */
 
   footer {
     background-color: #1e5c71;
@@ -240,7 +244,7 @@ header {
     align-items: center;
   }
 
-  /* About page button styling */
+  /* About page action button styling */
 
 .consult {
     cursor: pointer;
@@ -428,4 +432,48 @@ header {
     border: 1px solid #1e5c71;
     box-shadow: inset 100px 0 0 0 white;
   }
+
+  /* media queries for responsive design */
+
+  @media (max-width: 40rem) {
+    .services {
+      flex-direction: column;
+    }
+  
+    .nav_links,
+    li,
+    a {
+      flex-direction: column;
+      align-content: space-around;
+      justify-content: center;
+      align-items: center;
+    }
+  
+    .skip-nav {
+      visibility: hidden;
+    }
+  
+    .logo {
+      visibility: hidden;
+    }
+  
+    .consult {
+      font-size: 0.95rem;
+    }
+  }
+  
+  @media (min-width: 40em) {
+    .split {
+      flex-direction: row;
+    }
+  
+    .split > * {
+      flex-basis: 100%;
+    }
+  
+    .split > * + * {
+      margin-left: 2em;
+    }
+  }
+  
 
