Add comments to thank you page and about page plus style comment undo and formatting

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -444,7 +444,7 @@ header {
     li,
     a {
       flex-direction: column;
-      align-content: space-around;
+      /* align-content: space-around; */
       justify-content: center;
       align-items: center;
     }
