--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -230,7 +230,7 @@ h1 {
 .pic {
   border: 2px solid white;
   border-radius: 1%;
-  width: 350px;
+  width: 400px;
   height: 100%;
 }
 
@@ -272,7 +272,7 @@ h1 {
 .contact-form {
   font-family: poppins, sans-serif;
   cursor: pointer;
-  background-color: #1e5c71;
+  background-color: rgb(30, 92, 113);
   background-image: url("../images/group_meeting.webp");
   background-size: cover;
   background-blend-mode: multiply;
@@ -421,7 +421,7 @@ textarea::placeholder {
   cursor: pointer;
   margin: 20px 0;
   border: solid 1px white;
-  background-color: #1e5c71;
+  background-color: rgb(30, 92, 113);
   color: white;
   font-size: 1rem;
   border-radius: 10px;
