final css check and clean

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -200,7 +200,7 @@ footer {
   transform: scale(2);
 }
 
-/* About page div and container styling */
+/* About page div and image styling */
 
 .backimg {
   background-color: #1e5c71;
