--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -122,7 +122,6 @@ header {
 .services {
   cursor: pointer;
   padding: 4vh 0;
-  text-align: center;
   background-color: white;
   color: #1e5c71;
   display: flex;
@@ -179,7 +178,8 @@ footer {
   justify-content: center;
   font-size: smaller;
   color: white;
-  margin: 0 2vh;
+  margin-right: 1rem;
+  margin-left:5px;
 }
 
 .social-networks {
